--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -165,7 +165,7 @@ timestamp = {2014.01.01}
 
 @ARTICLE{Collazo,
   author = {Collazo J. , Gorrostieta E. , Pedraza J. y Villaseñor U. y Romero R. y González M. },
-  title = {Modelación de un Robot Móvil de Dos Ruedas con Tracción Diferencia},
+  title = {Modelación de un Robot Móvil de Dos Ruedas con Tracción Diferencial},
   year = {2009},
   url = "http://www.mecamex.net/anterior/cong08/articulos/58.pdf",
   note = "Consultado el 14 de mayo del 2016",
@@ -210,6 +210,24 @@ subactuados aplicado al Pendubot},
   url="https://www.researchgate.net/profile/Leo_Carrazco/publication/220012890_Control_lineal_estabilizante_para_sistemas_subactuados_al_pendubot/links/09e415045cc1a7bd14000000.pdf",
   school = {Universidad Aut ´ onoma de Nuevo León
 San Nicolás de los Garza}
+}
+
+@ARTICLE{Ortigoza,
+  title = {Trajectory Tracking Control for a Differential Drive Wheeled Robot Considering the Dynamics Related to the Actuators and Power Stage},
+  author ={S. Ortigoza, et al},
+  year={2016},
+  journal={IEEE Latin American Transactions},
+  volume={14},
+  pages={65-,664}
+  
+}
+
+@PHDTHESIS{Marin,
+  title={Localizaci\'on de Robots M\'oviles de Recursos Limitados basada en fusi\'on sensorial por eventos},
+  author={L. Mar\'in},
+  year={2014},
+  address={Valencia, Espa\~na},
+  school={Universdad polit\'ecnica de Valencia}
 }
 @comment{jabref-meta: selector_publisher:}
 
