imagenes sim diente de sierra

--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -1219,10 +1219,10 @@ presentan mediante el vector indicado en (\ref{eq:entradas_mve_dinamico}).
 
 \section{Análisis y simulaciones}
 
-En este apartado, se procede a realizar el análisis y las simulaciones respectivas al modelo
-cinemático y al modelo dinámico, obtenidas en la sección de modelado para el robot de dos
-ruedas. Para las simulaciones, se toman las características del robot real indicadas por Sarkar
-(***), las cuales se presentan en \ref{eq:datos_robot_sim}.
+En este apartado, se realizó el análisis y las simulaciones respectivas al modelo cinemático y al
+modelo dinámico, obtenidas en la sección de modelado para el robot de dos ruedas. Para las
+simulaciones, se tomaron las características del robot real indicadas por Sarkar (***), las cuales
+se presentan en \ref{eq:datos_robot_sim}.
 
 \begin{equation}
 \begin{cases}
@@ -1438,9 +1438,9 @@ De las gráficas que se presentan en la figura \ref{fig:velocidades_ruedas_trayec
 
 \subsection{Modelo dinámico}
 Para estudiar el comportamiento del modelo dinámico obtenido del sistema, descrito por las
-ecuaciones (\ref{eq:mve_dinamico}), (\ref{eq:entradas_mve_dinamico}) y (\ref{eq:salidas_mve_dinamico}), se
-procederá a llevar a cabo una serie de simulaciones en donde se analiza la respuesta del mismo al
-aplicar distintas funciones de entrada. 
+ecuaciones (\ref{eq:mve_dinamico}), (\ref{eq:entradas_mve_dinamico}) y
+(\ref{eq:salidas_mve_dinamico}), se llevaron a cabo una serie de simulaciones en donde se analizó la
+respuesta del mismo al aplicar distintas funciones de entrada.
 
 \subsubsection{Simulación torques constantes y opuestos}
 En esta simulación se aplica la entrada que se muestra en la figura
@@ -1554,7 +1554,6 @@ y $\omega(t)$, tal como se evidencia en (\ref{eq:mve_dinamico}). La diferencia e
 terminales de las velocidades angulares en las ruedas, resulta de que es necesario mantener
 velocidades distintas para lograr el movimiento circular a rapidez constante que se observa al final
 de la simulación.
-
 
 \begin{figure}[ht]
   \centering
