--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -1655,7 +1655,17 @@ Se puede observar que para la entra de la figura \ref{fig:entrada_entrada0} el r
 
 \section{Conclusiones y Recomendaciones}
 
-Se logró exitosamente simular el sistema descrito. En las simulaciones se obtienen los resultados observados en el sistema real.
+Se logró exitosamente simular el sistema descrito. En las simulaciones se obtienen los resultados observados en el sistema real. Respecto al modelo cinemático, se tiene un modelo que describe correctamente el funcionamiento del sistema real. A pesar que no se toman en consideración las energías del sistema, si el robot se mueve lento, este modelo es suficiente para poder controlarlo. Se debe notar que en el caso de las tres simulaciones, se obtienen los resultados esperados de cada caso. Para poder hacer los resultados de este documento más válidos, se toman los parámetros de un robot real, que se describe en %Citar el articulo**************************
+
+El modelo del punto desplazado logra describir de manera correcta el sistema. Además se logra implementar un sistema simple de control, donde se le envía al robot una trayectoria que debe seguir, y este es capaz de seguirla. Aunque tiene algunos errores (principalemnte en als esuinas), se puede afirmar que el robot es capaz de seguir las trayectorias definidas para las simulaciones. Este conrolde velocidd no es suficiente para aplicaciones más finas, donde se necesite mayor exactitud, en estos casos se debe implementar también un control de posición, somo el propuesto en \citep{Marin}. 
+
+El modelo del punto desplazado, permite describir un modelo inverso, este únicamente controla dos grados de libertad. Sin embargo, como se demostró en las simulaciones, la orientación del robot tiende a ser la adecuada. Conforme el robot avanza, la orientación del robot se modifica, pero esta modificación no afecta al proceso de control de la velocidad traslacional, sino que la orientación se va adaptando a la trayectoria. Para trayectos rectos, se observa un comportamiento asintótico entre el punto central y el punto desplazado, lo que indica que es una buena manera de describir a un robot diferencial cinemáticamente. Note que este modelo es muy útil si el robot se debe mantenr avanzando. Si este no es el caso se debe implementar alguno otro método de control que no se requiera de avance traslacional, para controlar la orientación. 
+
+El modelo cinemático (directo e inverso) no toma en cuenta consideraciones sobre las aceleraciones, entonces puede que se generen velocidades discontínuas, al aplicar una entrada. Para evitar este tipo de salidas se implementa un sistema que permite evitar estas discotinuidades, y suavizar las señales que se obtienen. Con estas limitantes en la salida, se vuelve imposible lograr alguna trayectorias específicas, como por ejemplo completar una trayectoria cuadrada a rapidez constante.
+
+Cuando se toma la trayectoria cuadrada con desaceleración cerca de las esquinas para simularla, se evidencia que el robot es capaz de seuir la trayecoria sin necesidad de hacer girar sus ruedas con aceleraciones infinitas. Este es un factor a tomar en cuenta, si se implementa un sistema real de robot diferencial. El robot puede describir con su punto descentralizado, cualquier trayecotria, siempre y cuando se tenga la velocidad adecuada para lograrlo. 
+
+En general, la salida del modelo dinámico, no toma enconsideración de las restricciones del movimiento, que se toman en cuenta por el modelo dinámico. Sin embargo esto no afecta a los resultados, pues de manera indiracta se cumple. Controlar al punto descentralizado, permite que las velocidades del robot no describan movimientos no permitidos. Sin embargo, cuando se agrega el sistema suavizador para evitar aceleraciones infinitas, se está aumentando el error de la restricción. Ya que este sistema amortigua cualquier discotinuidad, pero no amortigua a todas la sseñales por igual, entonces los cambios más abruptos son más amortiguados, y essos amortiguameintos diferentes, peuden provocar errores en als restricciones del movimeinto. 
 
 
 
