errores de referencias

--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -744,7 +744,8 @@ el método de Euler-Lagrange, las cuales corresponden a $x(t)$, $y(t)$, $\theta(t
 $\varphi_l(t)$.
 
 Estas restricciones no holonómicas están asociadas a fuerzas generalizadas que mantienen el
-movimiento bajo dichas condiciones (***REF), las cuales dependen de multiplicadores de Lagrange
+movimiento bajo dichas condiciones (***REF)%OJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOJOOOJOJOJOJOJOJOJOJOJOJOJOOJOJOJOJOJOJOJOJOJOJOJOJOJO
+, las cuales dependen de multiplicadores de Lagrange
 tal como se muestra en la ecuación (***), y que en este caso son $\lambda_1$, $\lambda_2$ y
 $\lambda_3$, correspondientes a $f_1$, $f_2$ y $f_3$ respectivamente. Dichas fuerzas generalizadas
 modifican la ecuación de Lagrange para cada coordenada, tal como se describe en la ecuación (***).
